--- a/app/src/main/res/layout/activity_novo_texto.xml
+++ b/app/src/main/res/layout/activity_novo_texto.xml
@@ -31,29 +31,10 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="68dp"
         android:onClick="enviarNovoTexto"
         android:text="@string/salvar"
-        app:layout_constraintStart_toStartOf="@+id/etCor"
-        app:layout_constraintTop_toBottomOf="@+id/etCor" />
+        app:layout_constraintTop_toBottomOf="@+id/etTexto"
+        tools:layout_editor_absoluteX="8dp" />
 
-    <EditText
-        android:id="@+id/etCor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text=""
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/cor_do_texto"
-        app:layout_constraintStart_toStartOf="@+id/etTexto"
-        app:layout_constraintTop_toBottomOf="@+id/etTexto" />
 </androidx.constraintlayout.widget.ConstraintLayout>
