--- a/app/src/main/res/layout/activity_nova_cor.xml
+++ b/app/src/main/res/layout/activity_nova_cor.xml
@@ -7,37 +7,53 @@
     android:layout_height="match_parent"
     tools:context=".NovaCorActivity">
 
-    <EditText
-        android:id="@+id/etFonte"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text=""
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="32dp"
         android:onClick="enviarNovaCor"
         android:text="@string/salvar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etFonte" />
+        app:layout_constraintStart_toStartOf="@+id/inputCorSuperior"
+        app:layout_constraintTop_toBottomOf="@+id/inputCorSuperior" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="96dp"
+        android:layout_width="148dp"
         android:layout_height="34dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/mudar_cor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/inputCorInferior"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/mudar_cor_superior"
+        app:layout_constraintStart_toStartOf="@+id/inputCorInferior"
+        app:layout_constraintTop_toBottomOf="@+id/inputCorInferior" />
+
+    <EditText
+        android:id="@+id/inputCorSuperior"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
