--- a/app/src/main/res/layout/activity_novo_texto.xml
+++ b/app/src/main/res/layout/activity_novo_texto.xml
@@ -12,12 +12,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/novo_texto"
+        android:text="@string/novo_texto_inferior"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etTexto"
+        android:id="@+id/inputTextoInferior"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -31,14 +31,14 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         android:onClick="enviarNovoTexto"
         android:text="@string/salvar"
-        app:layout_constraintStart_toStartOf="@+id/etFonte"
-        app:layout_constraintTop_toBottomOf="@+id/etFonte" />
+        app:layout_constraintStart_toStartOf="@+id/inputTextoSuperior"
+        app:layout_constraintTop_toBottomOf="@+id/inputTextoSuperior" />
 
     <EditText
-        android:id="@+id/etFonte"
+        android:id="@+id/inputTamanhoFonte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -54,8 +54,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/mudar_tamanho_fonte"
-        app:layout_constraintStart_toStartOf="@+id/etTexto"
-        app:layout_constraintTop_toBottomOf="@+id/etTexto"
-        tools:text="Mudar Fonte" />
+        app:layout_constraintStart_toStartOf="@+id/inputTextoInferior"
+        app:layout_constraintTop_toBottomOf="@+id/inputTextoInferior" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/novo_texto_superior"
+        app:layout_constraintStart_toStartOf="@+id/inputTamanhoFonte"
+        app:layout_constraintTop_toBottomOf="@+id/inputTamanhoFonte" />
+
+    <EditText
+        android:id="@+id/inputTextoSuperior"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
